fixed y-overflow on body

--- a/static/styles/reset.css
+++ b/static/styles/reset.css
@@ -37,6 +37,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  overflow-y: scroll !important;
 }
 
 /* A elements that don't have a class get default styles */
